refactor(backend,frontend): notification_enabled機能を削除する
